M - material node bug #41885

Closed
opened 2014-09-20 20:20:09 +02:00 by Alexey · 10 comments

*System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (2.63 and all later)

Worked: (BI:2.62 and all earlier

              Cycles: None)

Short description of error
in BI:
Create a material, activate node mode, create anything,select any and press M to mute and F12
or select rendered shading mode - we will see ignore mute function.
in Cycles:
sometimes working normal, and sometimes fade to black instead mute.
(i can not know how to use Cycles and can not test this thoroughly)
Exact steps for others to reproduce the error
BI:
open this{F111353}
F12 or go to rendered shading mode
bi1.png

Cycles:
open this mute_bug_in_Cycles.blend
F12 or go to rendered shading mode - we will see fade to black
cycles1.png

P.S.In cycles 2.62 and all earlier - we don't see fade to black, but we see ignore mute
in #41349 i was write about texture nodes bug, and now i write about material

*System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (2.63 and all later) Worked: (BI:2.62 and all earlier ``` Cycles: None) ``` **Short description of error** in BI: Create a material, activate node mode, create anything,select any and press M to mute and F12 or select rendered shading mode - we will see ignore mute function. in Cycles: sometimes working normal, and sometimes fade to black instead mute. (i can not know how to use Cycles and can not test this thoroughly) **Exact steps for others to reproduce the error** BI: open this{[F111353](https://archive.blender.org/developer/F111353/mute_bug_in_BI.blend)} F12 or go to rendered shading mode ![bi1.png](https://archive.blender.org/developer/F111354/bi1.png) Cycles: open this [mute_bug_in_Cycles.blend](https://archive.blender.org/developer/F111356/mute_bug_in_Cycles.blend) F12 or go to rendered shading mode - we will see fade to black ![cycles1.png](https://archive.blender.org/developer/F111358/cycles1.png) P.S.In cycles 2.62 and all earlier - we don't see fade to black, but we see ignore mute in #41349 i was write about texture nodes bug, and now i write about material

Changed status to: 'Open'

Changed status to: 'Open'
Alexey self-assigned this 2014-09-20 20:20:09 +02:00

Added subscriber: @Inwader77

Added subscriber: @Inwader77

Added subscribers: @LukasTonne, @ThomasDinges

Added subscribers: @LukasTonne, @ThomasDinges

Lukas, can you please take a look?

Lukas, can you please take a look?
Alexey was unassigned by Bastien Montagne 2014-09-21 12:31:15 +02:00
Lukas Tönne was assigned by Sergey Sharybin 2014-09-22 13:50:35 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Lukas, afraid you're the best expert on understanding how mute works.. Assigning to you :) Feel free to give it back to me if it's more up to render engines to deal with this.

Lukas, afraid you're the best expert on understanding how mute works.. Assigning to you :) Feel free to give it back to me if it's more up to render engines to deal with this.

This issue was referenced by 345b16601c

This issue was referenced by 345b16601cfb8e50ca03f883902ee070c1630c2f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 345b16601c.

Closed by commit 345b16601c.

This issue was referenced by 2419002e34

This issue was referenced by 2419002e3445bd17df5fc1d8fc98fdbcade4d930
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41885
There is no content yet.