Fix T41885, muting broken for Blender Internal nodes in rendering.

Nodes don't have muting callbacks any more, so now have to check the
flag to prevent overwriting values on the stack that they share with
inputs.