source/blender/nodes/intern/node_exec.c
@@ -305,7 +305,7 @@ bool ntreeExecThreadNodes(bNodeTreeExec *exec, bNodeThreadStack *nts, void *call
 			 */
 //			if (node->typeinfo->compatibility == NODE_NEW_SHADING)
 //				return false;
-			if (node->typeinfo->execfunc)
+			if (node->typeinfo->execfunc && !(node->flag & NODE_MUTED))
 				node->typeinfo->execfunc(callerdata, thread, node, &nodeexec->data, nsin, nsout);
 		}
 	}
